Fixed spacing issue in character#show raids module.

--- a/app/assets/stylesheets/characters.css.sass
+++ b/app/assets/stylesheets/characters.css.sass
@@ -41,3 +41,8 @@
       font-size: 5em
       font-weight: bold
 
+.raids
+  .group-left
+    padding-left: 0
+  .group-right
+    padding-right: 0
